MasterDegreeBackend/Builders/k8s/master-degree/prod/game-servers-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-servers-controller
  labels:
    app: game-servers-controller
spec:
  selector:
    matchLabels:
      app: game-servers-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: game-servers-controller
    spec:
      serviceAccountName: api-serviceaccount
      containers:
        - name: game-servers-controller
          image:  registry.digitalocean.com/deusald-container/game-servers-controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 39998
              name: default-tcp
              protocol: TCP
            - containerPort: 39998
              name: default-udp
              protocol: UDP
      imagePullSecrets:
        - name: do-registry
---
apiVersion: v1
kind: Service
metadata:
  name: game-servers-controller
  labels:
    app: game-servers-controller
spec:
  type: NodePort
  selector:
    app: game-servers-controller
  ports:
    - port: 39998
      targetPort: 39998
      protocol: TCP
      name: default-tcp
      nodePort: 31317
    - port: 39998
      targetPort: 39998
      protocol: UDP
      name: default-udp
      nodePort: 31317
